Remove TransactionAttribute on findFall, Remove new Integer, Remove some unused NotNull and Nullable